modificaciones header y footer

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur perferendis sapiente ducimus voluptatum architecto.</p>
     </main>
     <footer>
+        <div class="img">
+            <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
+        </div>
         <div class="curso">
-            <p>FRONT END JS - Comisión: 24225 </p>
+            <p>FRONT END JS - Comisión: 24225</p>
             <p>Año: 2024</P>
         </div>
         <div class="integrantes">
