--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="./images/tienda.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos-gral.css">
@@ -21,7 +21,10 @@
 
 <body>
     <header>
+        <div class="logo">
+        <img src="images/tienda.png" alt="">
         <p class="marca">LaTienda</p>
+    </div>
 
         <div class="formBuscar">
             <form action="">
@@ -32,7 +35,7 @@
 
         <div class="usuario">
             <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html"><i class="fa-solid fa-user"></i><span> Ingresar</span></a>
+            <a href="login.html"><i class="fa-solid fa-user"></i></a>
             <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
                     id="btn-salir"></i></a>
         </div>
