--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
         </div>
         <div class="curso">
-            <p>FRONT END JS - Comisión: 24225</p>
-            <p>Año: 2024</P>
+            <p>FRONT END JS - Comisión: 24225 - Año: 2024</p>
+            <!-- <p>Año: 2024</P> -->
         </div>
         <div class="integrantes">
             <p> María de los Ángeles López</p>
