estructura con grid y cards productos y admin teminadas

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 </head>
 
 <body>
+    <div class="container"></div>
     <header>
         <div class="logo">
-        <img src="images/tienda.png" alt="">
-        <p class="marca">LaTienda</p>
-    </div>
+            <img src="images/tienda.png" alt="">
+            <p class="marca">LaTienda</p>
+        </div>
 
         <div class="formBuscar">
             <form action="">
@@ -62,22 +63,23 @@
 
     <main>
         <h1 class="titulo">Lorem, ipsum dolor.</h1>
-        <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur perferendis sapiente ducimus voluptatum architecto.</p>
+        <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum autem ut ex aspernatur modi
+            explicabo, eligendi, reprehenderit deserunt voluptas a culpa veniam quo, assumenda consequatur perferendis
+            sapiente ducimus voluptatum architecto.</p>
     </main>
     <footer>
         <div class="img">
             <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
         </div>
         <div class="curso">
-            <p>FRONT END JS - Comisión: 24225 - Año: 2024</p>
-            <!-- <p>Año: 2024</P> -->
+            <p>FRONT END JS - Comisión: 24225</p>
+            <p>Año: 2024</P>
         </div>
         <div class="integrantes">
             <p> María de los Ángeles López</p>
         </div>
     </footer>
-
-
+    <div>
 </body>
 
 </html>
