--- a/tienda.html
+++ b/tienda.html
@@ -21,150 +21,175 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/tienda.png" alt="">
-            <p class="marca">LaTienda</p>
-        </div>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="images/tienda.png" alt="">
+                <p class="marca">LaTienda</p>
+            </div>
 
-        <div class="formBuscar">
-            <form action="">
-                <input type="search" name="" id="buscar">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
-        </div>
-
-        <div class="usuario">
-            <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html"><i class="fa-solid fa-user"></i></a>
-            <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
-                    id="btn-salir"></i></a>
-        </div>
-    </header>
-    <nav>
-        <input type="checkbox" id="open-menu">
-        <label for="open-menu">
-            <i class="fa-solid fa-bars btn"></i>
             <div class="formBuscar">
                 <form action="">
                     <input type="search" name="" id="buscar">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </form>
             </div>
-        </label>
 
-        <div class="link">
-            <a href="index.html"><i class="fa-solid fa-circle-dollar-to-slot"></i> Ofertas</a>
-            <a href="tienda.html"><i class="fa-solid fa-store"></i> Tienda Digital</a>
-            <a href="contactenos.html"><i class="fa-solid fa-envelope"></i> Contáctenos</a>
-            <a href="sucursales.html"><i class="fa-solid fa-location-dot"></i>Sucursales</a>
-        </div>
-    </nav>
-
-    <main>
-        <h1 class="titulo">Nuestros Productos</h1>
-        <div class="productos">
-
-            <div class="card">
-                <img src="images/productos/kiwis.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
-                    <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
-                    </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
-                </div>
+            <div class="usuario">
+                <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="login.html"><i class="fa-solid fa-user"></i></a>
+                <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
+                        id="btn-salir"></i></a>
             </div>
-
-            <div class="card">
-                <img src="images/productos/frambuesas.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
+        </header>
+        <nav>
+            <input type="checkbox" id="open-menu">
+            <label for="open-menu">
+                <i class="fa-solid fa-bars btn"></i>
+                <div class="formBuscar">
                     <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
+                        <input type="search" name="" id="buscar">
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
                 </div>
-            </div>
+            </label>
 
-            <div class="card">
-                <img src="images/productos/uvas.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
-                    <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
-                    </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
+            <div class="link">
+                <a href="index.html"><i class="fa-solid fa-circle-dollar-to-slot"></i> Ofertas</a>
+                <a href="tienda.html"><i class="fa-solid fa-store"></i> Tienda Digital</a>
+                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i> Contáctenos</a>
+                <a href="sucursales.html"><i class="fa-solid fa-location-dot"></i>Sucursales</a>
+            </div>
+        </nav>
+
+        <main>
+            <h1 class="titulo">Nuestros Productos</h1>
+            <div class="productos">
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/kiwis.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte.</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$1560</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/frambuesas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/uvas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/manzanas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$1800</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/Arandanos.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
+                </div> 
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/Bananas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <i class="fa-solid fa-square-minus"></i>
+                                <input type="number" name="cant" id="cant" min="0">
+                                <i class="fa-solid fa-square-plus"></i>
+                            </form>
+                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                        </div>
+                    </div>
+                </div> 
+
             </div>
-
-            <div class="card">
-                <img src="images/productos/Bananas.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
-                    <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
-                    </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
-                </div>
+        </main>
+        <footer>
+            <div class="img">
+                <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
             </div>
-
-            <div class="card">
-                <img src="images/productos/cerezas.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
-                    <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
-                    </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
-                </div>
+            <div class="curso">
+                <p>FRONT END JS - Comisión: 24225</p>
+                <p>Año: 2024</P>
             </div>
-
-            <div class="card">
-                <img src="images/productos/Arandanos.jpg" alt="">
-                <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eaque.</p>
-                <p class="precio">$1560</p>
-                <div class="agregar">
-                    <form action="">
-                        <i class="fa-solid fa-square-minus"></i>
-                        <input type="number" name="cant" id="cant" min="0">
-                        <i class="fa-solid fa-square-plus"></i>
-                    </form>
-                    <button><i class="fa-solid fa-cart-plus"></i></button>
-                </div>
+            <div class="integrantes">
+                <p> María de los Ángeles López</p>
             </div>
+        </footer>
 
-        </div>
-    </main>
-    <footer>
-        <div class="img">
-            <img src="images/Logos_BA_Agencia_grande.jpg" alt="">
-        </div>
-        <div class="curso">
-            <p>FRONT END JS - Comisión: 24225 - Año: 2024</p>
-            <!-- <p>Año: 2024</P> -->
-        </div>
-        <div class="integrantes">
-            <p> María de los Ángeles López</p>
-        </div>
-    </footer>
-
-
+    </div>
 </body>
 
 </html>
