--- a/tienda.html
+++ b/tienda.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/cards.css">
-    <!-- <link rel="stylesheet" href="css/slide.css"> -->
+
     <title>LaTienda</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="contenedor">
         <header>
             <div class="logo">
                 <img src="images/tienda.png" alt="">
@@ -55,21 +55,22 @@
             </label>
 
             <div class="link">
-                <a href="index.html"><i class="fa-solid fa-circle-dollar-to-slot"></i> Ofertas</a>
-                <a href="tienda.html"><i class="fa-solid fa-store"></i> Tienda Digital</a>
-                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i> Contáctenos</a>
-                <a href="sucursales.html"><i class="fa-solid fa-location-dot"></i>Sucursales</a>
+                <a href="index.html"><i class="fa-solid fa-house"></i>Bienvenidos</a>
+                <a href="tienda.html"><i class="fa-solid fa-store"></i>Tienda</a>
+                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i>Contáctenos</a>         
+                <a href="administracion.html"><i class="fa-solid fa-toolbox"></i>Administración</a>
             </div>
         </nav>
 
         <main>
             <h1 class="titulo">Nuestros Productos</h1>
-            <div class="productos">
+            <section class="productos">
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/kiwis.jpg" alt="">
+                        <img src="https://picsum.photos/400/280?random=1" alt="">
                         <p class="descrpcion">Lorem ipsum dolor sit amet consecte.</p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$1560</p>
@@ -86,8 +87,9 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/frambuesas.jpg" alt="">
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                        <img src="https://picsum.photos/400/280?random=2" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit>. </p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$3500</p>
@@ -104,8 +106,9 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/uvas.jpg" alt="">
+                        <img src="https://picsum.photos/400/280?random=3" alt="">
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$3500</p>
@@ -122,8 +125,9 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/manzanas.jpg" alt="">
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                        <img src="https://picsum.photos/400/280?random=4" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates</p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$1800</p>
@@ -140,8 +144,9 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/Arandanos.jpg" alt="">
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                        <img src="https://picsum.photos/400/280?random=5" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$3500</p>
@@ -158,8 +163,9 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="images/productos/Bananas.jpg" alt="">
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates incidunt eveniet blanditiis?</p>
+                        <img src="https://picsum.photos/400/280?random=6" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
+                        <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
                         <p class="precio">$3500</p>
@@ -174,7 +180,7 @@
                     </div>
                 </div> 
 
-            </div>
+            </section>
         </main>
         <footer>
             <div class="img">
