--- a/administracion.html
+++ b/administracion.html
@@ -15,13 +15,15 @@
     <link rel="stylesheet" href="css/estilos-gral.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/administracion.css">
     <link rel="stylesheet" href="css/cards.css">
-    <!-- <link rel="stylesheet" href="css/slide.css"> -->
+    <link rel="stylesheet" href="css/formularios.css">
+
     <title>LaTienda</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="contenedor">
         <header>
             <div class="logo">
                 <img src="images/tienda.png" alt="">
@@ -55,16 +57,55 @@
             </label>
 
             <div class="link">
-                <a href="index.html"><i class="fa-solid fa-circle-dollar-to-slot"></i> Ofertas</a>
-                <a href="tienda.html"><i class="fa-solid fa-store"></i> Tienda Digital</a>
-                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i> Contáctenos</a>
-                <a href="sucursales.html"><i class="fa-solid fa-location-dot"></i>Sucursales</a>
+                <a href="index.html"><i class="fa-solid fa-house"></i>Bienvenidos</a>
+                <a href="tienda.html"><i class="fa-solid fa-store"></i>Tienda</a>
+                <a href="contactenos.html"><i class="fa-solid fa-envelope"></i>Contáctenos</a>            
+                <a href="administracion.html"><i class="fa-solid fa-toolbox"></i>Administración</a>
             </div>
         </nav>
 
         <main>
             <h1 class="titulo">Administración de Productos</h1>
-            <div class="productos">
+
+            <div class="agregar">
+                <button>Agregar Nuevo Producto</button>
+            </div>
+
+            <div id="formAdmin">
+                <section id="AgregarProd">
+                    <form action="" class="formularios">
+                        <h2>Nuevo Producto</h2>
+                        <label for="imagen" class="">Imagen</label>
+                        <input type="file" name="imagen" id="imagen" class="">
+                        <label for="descrpcion" class="">Mensaje</label>
+                        <textarea name="mensaje" id="descrpcion" rows="8"></textarea>
+                        <label for="precio" class="">Precio</label>
+                        <input type="number" name="precio" id="precio" class="">
+                        <label for="stock" class="">Stock</label>
+                        <input type="number" name="stock" id="stock" class="">
+
+                        <input type="submit" value="Agregar Producto" class="">
+                    </form>
+                </section>
+
+                <section id="EditarProd">
+
+                    <form action="" class="formularios">
+                        <h2>Actualizar Datos</h2>
+                        <label for="imagen" class="">Imagen</label>
+                        <input type="file" name="imagen" id="imagen" class="">
+                        <label for="descrpcion" class="">Mensaje</label>
+                        <textarea name="mensaje" id="descrpcion" rows="8"></textarea>
+                        <label for="precio" class="">Precio</label>
+                        <input type="number" name="precio" id="precio" class="">
+                        <label for="stock" class="">Stock</label>
+                        <input type="number" name="stock" id="stock" class="">
+
+                        <input type="submit" value="Actualizar Producto" class="">
+                    </form>
+                </section>
+            </div>
+            <section class="productos">
 
                 <div class="card">
                     <div class="top">
@@ -85,7 +126,7 @@
                     </div>
                 </div>
 
-            </div>
+            </section>
         </main>
         <footer>
             <div class="img">
