arreglo algunos detalles en formularios

--- a/administracion.html
+++ b/administracion.html
@@ -77,12 +77,12 @@
                         <h2>Nuevo Producto</h2>
                         <label for="imagen" class="">Imagen</label>
                         <input type="file" name="imagen" id="imagen" class="">
-                        <label for="descrpcion" class="">Mensaje</label>
-                        <textarea name="mensaje" id="descrpcion" rows="8"></textarea>
+                        <label for="descrpcion" class="">Descrpción</label>
+                        <textarea name="descrpcion" id="descrpcion" rows="8" placeholder="Escriba la descripción del producto aqui.."></textarea>
                         <label for="precio" class="">Precio</label>
-                        <input type="number" name="precio" id="precio" class="">
+                        <input type="number" name="precio" id="precio" class="" placeholder="Ingrese el precio">
                         <label for="stock" class="">Stock</label>
-                        <input type="number" name="stock" id="stock" class="">
+                        <input type="number" name="stock" id="stock" class="" placeholder="Ingrese la cantidad disponible">
 
                         <input type="submit" value="Agregar Producto" class="">
                     </form>
@@ -94,8 +94,8 @@
                         <h2>Actualizar Datos</h2>
                         <label for="imagen" class="">Imagen</label>
                         <input type="file" name="imagen" id="imagen" class="">
-                        <label for="descrpcion" class="">Mensaje</label>
-                        <textarea name="mensaje" id="descrpcion" rows="8"></textarea>
+                        <label for="descrpcion" class="">Descripción</label>
+                        <textarea name="descrpcion" id="descrpcion" rows="8" ></textarea>
                         <label for="precio" class="">Precio</label>
                         <input type="number" name="precio" id="precio" class="">
                         <label for="stock" class="">Stock</label>
@@ -118,7 +118,7 @@
                         <div class="agregar">
                             <form action="">
                                 <span>Stock: </span>
-                                <span>{200}</span>
+                                <span>{20}</span>
                             </form>
                             <button><i class="fa-solid fa-pencil"></i></button>
                             <button><i class="fa-solid fa-trash-can"></i></button>
