--- a/contactenos.html
+++ b/contactenos.html
@@ -70,22 +70,24 @@
         <h1 class="titulo">Ubicación y Contacto</h1>
 
         <div class="contacto">
-        <section>
+        <section class="form_contacto">
             <form action="" class="formularios">
                 <h2>Contáctenos</h2>
                 <label for="nombre" class="">Nombre</label>
-                <input type="text" name="nombre" id="nombre" class="">
+                <input type="text" name="nombre" id="nombre" class="" placeholder="Escriba su nombre">
                 <label for="mail" class="">Email</label>
-                <input type="email" name="nombre" class="">
+                <input type="email" name="email" class="" placeholder="Escriba su email">
                 <label for="mensaje" class="">Mensaje</label>
-                <textarea name="mensaje" id="mensaje" rows="8"></textarea>
+                <textarea name="mensaje" id="mensaje" rows="8" placeholder="Escriba el mensaje aqui..."></textarea>
                 <input type="submit" value="Enviar Mensaje" class="">
             </form>
         </section>
-        <section>
+        <section class="ubicacion">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.7420165566396!2d-58.366478224521764!3d-34.66121766053671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33351c5eec7ef%3A0xbc677ec4ef26dd79!2s25%20de%20Mayo%20127%2C%20B1870BZD%20Avellaneda%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1730473456605!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p class="direccion"><i class="fa-solid fa-location-dot"></i> 25 de Mayo 127, Avellaneda, Bs. As.</p>
+            <p class="direccion"><i class="fa-solid fa-phone"></i> 11 4526 7898</p>
         </section>
-    </div>
+ 
     </main>
 
     <footer>
