agrego favoritos y detalles de presentacion

--- a/administracion.html
+++ b/administracion.html
@@ -38,6 +38,7 @@
             </div>
 
             <div class="usuario">
+                <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
                 <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 <a href="login.html"><i class="fa-solid fa-user"></i></a>
                 <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
@@ -110,6 +111,63 @@
                 <div class="card">
                     <div class="top">
                         <img src="images/productos/Bananas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
+                            voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <span>Stock: </span>
+                                <span>{20}</span>
+                            </form>
+                            <button><i class="fa-solid fa-pencil"></i></button>
+                            <button><i class="fa-solid fa-trash-can"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/frambuesas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
+                            voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <span>Stock: </span>
+                                <span>{20}</span>
+                            </form>
+                            <button><i class="fa-solid fa-pencil"></i></button>
+                            <button><i class="fa-solid fa-trash-can"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/manzanas.jpg" alt="">
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
+                            voluptates incidunt eveniet blanditiis?</p>
+                    </div>
+                    <div class="bottom">
+                        <p class="precio">$3500</p>
+                        <div class="agregar">
+                            <form action="">
+                                <span>Stock: </span>
+                                <span>{20}</span>
+                            </form>
+                            <button><i class="fa-solid fa-pencil"></i></button>
+                            <button><i class="fa-solid fa-trash-can"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="top">
+                        <img src="images/productos/Arandanos.jpg" alt="">
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
                             voluptates incidunt eveniet blanditiis?</p>
                     </div>
