--- a/tienda.html
+++ b/tienda.html
@@ -36,6 +36,7 @@
             </div>
 
             <div class="usuario">
+                <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
                 <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 <a href="login.html"><i class="fa-solid fa-user"></i></a>
                 <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
@@ -69,11 +70,11 @@
                 <div class="card">
                     <div class="top">
                         <img src="https://picsum.photos/400/280?random=1" alt="">
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte.</p>
+                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$1560</p>
+                        <p class="precio">$1560 <i class="fa-solid fa-heart"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
@@ -92,7 +93,7 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500</p>
+                        <p class="precio">$3500 <i class="fa-solid fa-heart-circle-check"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
@@ -111,7 +112,7 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500</p>
+                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
@@ -130,7 +131,7 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$1800</p>
+                        <p class="precio">$1800 <i class="fa-solid fa-heart-circle-check"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
@@ -149,7 +150,7 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500</p>
+                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
@@ -168,7 +169,7 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500</p>
+                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
