--- a/contactenos.html
+++ b/contactenos.html
@@ -40,6 +40,7 @@
         </div>
 
         <div class="usuario">
+            <a href="favoritos.html"><i class="fa-solid fa-heart"></i></a>
             <a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="login.html"><i class="fa-solid fa-user"></i></a>
             <a href="salir.html" style="display: none;"><i class="fa-solid fa-right-from-bracket"
