--- a/tienda.html
+++ b/tienda.html
@@ -78,7 +78,7 @@
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
+                                <input type="number" name="cant" id="cant" min="0" value="1">
                                 <i class="fa-solid fa-square-plus"></i>
                             </form>
                             <button><i class="fa-solid fa-cart-plus"></i></button>
