favoritos y titulos productos

--- a/administracion.html
+++ b/administracion.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/formularios.css">
 
-    <title>LaTienda</title>
+    <title>LaTienda - Administración</title>
 </head>
 
 <body>
