--- a/contactenos.html
+++ b/contactenos.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/formularios.css">
 
-    <title>LaTienda: contáctenos</title>
+    <title>LaTienda - Contáctenos</title>
 </head>
 
 <body>
