--- a/favoritos.html
+++ b/favoritos.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/cards.css">
 
-    <title>LaTienda</title>
+    <title>LaTienda - Favoritos</title>
 </head>
 
 <body>
@@ -65,28 +65,8 @@
         </nav>
 
         <main>
-            <h1 class="titulo">Nuestros Productos</h1>
+            <h1 class="titulo">Mis Favoritos</h1>
             <section class="productos">
-
-                <div class="card">
-                    <div class="top">
-                        <img src="https://picsum.photos/400/280?random=1" alt="">
-                        <p class="titProd">PRODUCTO 1</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$1560 <i class="fa-solid fa-heart"></i></p>
-                        <div class="agregar">
-                            <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0" value="1">
-                                <i class="fa-solid fa-square-plus"></i>
-                            </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="card">
                     <div class="top">
@@ -110,26 +90,6 @@
 
                 <div class="card">
                     <div class="top">
-                        <img src="https://picsum.photos/400/280?random=3" alt="">
-                        <p class="titProd">PRODUCTO 3</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
-                        <div class="agregar">
-                            <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
-                            </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div> 
-
-                <div class="card">
-                    <div class="top">
                         <img src="https://picsum.photos/400/280?random=4" alt="">
                         <p class="titProd">PRODUCTO 4</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates</p>
@@ -137,46 +97,6 @@
                     </div>
                     <div class="bottom">
                         <p class="precio">$1800 <i class="fa-solid fa-heart-circle-check"></i></p>
-                        <div class="agregar">
-                            <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
-                            </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div> 
-
-                <div class="card">
-                    <div class="top">
-                        <img src="https://picsum.photos/400/280?random=5" alt="">
-                        <p class="titProd">PRODUCTO 5</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
-                        <div class="agregar">
-                            <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
-                            </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
-                        </div>
-                    </div>
-                </div> 
-
-                <div class="card">
-                    <div class="top">
-                        <img src="https://picsum.photos/400/280?random=6" alt="">
-                        <p class="titProd">PRODUCTO 6</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
-                        <a href="opiniones.html" class="resenias">ver reseñas</a>
-                    </div>
-                    <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
                         <div class="agregar">
                             <form action="">
                                 <i class="fa-solid fa-square-minus"></i>
