--- a/opiniones.html
+++ b/opiniones.html
@@ -11,12 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos-gral.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/cards2.css">
-    <title>LaTienda</title>
+    <title>LaTienda - Reseñas</title>
 </head>
 
 <body>
@@ -71,6 +72,7 @@
                     <div class="detalles">
                         <div class="top">
                             <img src="https://picsum.photos/400/280?random=1" alt="">
+                            <p class="titProd">NOMBRE DEL PRODUCTO</p>
                             <p class="descrpcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, placeat
                                 pariatur repellendus, quam ipsa laudantium ab esse tenetur saepe ea molestias qui
                                 provident non aliquid! </p>
