--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/formularios.css">
 
-    <title>LaTienda</title>
+    <title>LaTienda - Registro</title>
 </head>
 
 <body>
