adiministracion con grid

--- a/administracion.html
+++ b/administracion.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilos-gral.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -72,7 +73,7 @@
                 <button>Agregar Nuevo Producto</button>
             </div>
 
-            <div id="formAdmin">
+       <div id="formAdmin">
                 <section id="AgregarProd">
                     <form action="" class="formularios">
                         <h2>Nuevo Producto</h2>
@@ -106,11 +107,13 @@
                     </form>
                 </section>
             </div>
+
             <section class="productos">
 
                 <div class="card">
                     <div class="top">
                         <img src="images/productos/Bananas.jpg" alt="">
+                        <p class="titProd">PRODUCTO 1</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
                             voluptates incidunt eveniet blanditiis?</p>
                     </div>
@@ -118,7 +121,7 @@
                         <p class="precio">$3500</p>
                         <div class="agregar">
                             <form action="">
-                                <span>Stock: </span>
+                                <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
                             <button><i class="fa-solid fa-pencil"></i></button>
@@ -130,6 +133,7 @@
                 <div class="card">
                     <div class="top">
                         <img src="images/productos/frambuesas.jpg" alt="">
+                        <p class="titProd">PRODUCTO 2</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
                             voluptates incidunt eveniet blanditiis?</p>
                     </div>
@@ -137,8 +141,8 @@
                         <p class="precio">$3500</p>
                         <div class="agregar">
                             <form action="">
-                                <span>Stock: </span>
-                                <span>{20}</span>
+                                <!-- <span>Stock: </span> -->
+                                <span>{30}</span>
                             </form>
                             <button><i class="fa-solid fa-pencil"></i></button>
                             <button><i class="fa-solid fa-trash-can"></i></button>
@@ -149,6 +153,7 @@
                 <div class="card">
                     <div class="top">
                         <img src="images/productos/manzanas.jpg" alt="">
+                        <p class="titProd">PRODUCTO 3</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
                             voluptates incidunt eveniet blanditiis?</p>
                     </div>
@@ -156,7 +161,7 @@
                         <p class="precio">$3500</p>
                         <div class="agregar">
                             <form action="">
-                                <span>Stock: </span>
+                                <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
                             <button><i class="fa-solid fa-pencil"></i></button>
@@ -168,6 +173,7 @@
                 <div class="card">
                     <div class="top">
                         <img src="images/productos/Arandanos.jpg" alt="">
+                        <p class="titProd">PRODUCTO 4</p>
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus
                             voluptates incidunt eveniet blanditiis?</p>
                     </div>
@@ -175,7 +181,7 @@
                         <p class="precio">$3500</p>
                         <div class="agregar">
                             <form action="">
-                                <span>Stock: </span>
+                                <!-- <span>Stock: </span> -->
                                 <span>{20}</span>
                             </form>
                             <button><i class="fa-solid fa-pencil"></i></button>
