--- a/carrito.html
+++ b/carrito.html
@@ -113,7 +113,7 @@
                     <p class="precio">$5950</p>
                 </div>
 
-                <button class="comprar">COMPRAR AHORA</button>
+                <button class="comprar">Comprar Ahora</button>
 
 
             </section>
