--- a/contactenos.html
+++ b/contactenos.html
@@ -72,7 +72,7 @@
 
         <div class="contacto">
         <section class="form_contacto">
-            <form action="" class="formularios">
+            <form action="https://formspree.io/f/xvgoryld" method="post" class="formularios">
                 <h2>Contáctenos</h2>
                 <label for="nombre" class="">Nombre</label>
                 <input type="text" name="nombre" id="nombre" class="" placeholder="Escriba su nombre">
