agregando button y sus estilos

--- a/carrito.html
+++ b/carrito.html
@@ -68,6 +68,8 @@
             <section id="carrito">
                 <h1 class="titulo">Mi Carrito</h1>
 
+                <button class="vaciar">Vaciar Carrito</button>
+
                 <div class="prodCarrito">
                     <img src="https://picsum.photos/400/280?random=1" alt="">
                     <div class="detalle">
@@ -75,9 +77,9 @@
                         <p>Producto 1</p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
                                 <input type="number" name="cant" id="cant" min="0" value="1">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
                             <div>
                                 <p class="subtotal">total</p>
@@ -95,16 +97,15 @@
                         <p>Producto 2</p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
                                 <input type="number" name="cant" id="cant" min="0" value="1">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
                             <div>
                                 <p class="subtotal">total</p>
-                                <p class="precio">$2450</p>
+                                <p class="precio">$3500</p>
                             </div>
                         </div>
-
                     </div>
                 </div>
 
