--- a/opiniones.html
+++ b/opiniones.html
@@ -78,14 +78,14 @@
                                 provident non aliquid! </p>
                         </div>
                         <div class="bottom">
-                            <p class="precio">$1560 <i class="fa-solid fa-heart"></i></p>
+                            <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                             <div class="agregar">
                                 <form action="">
-                                    <i class="fa-solid fa-square-minus"></i>
+                                    <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
                                     <input type="number" name="cant" id="cant" min="0" value="1">
-                                    <i class="fa-solid fa-square-plus"></i>
+                                    <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                                 </form>
-                                <button><i class="fa-solid fa-cart-plus"></i> Añadir al Carrito</button>
+                                <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i> Añadir al Carrito</button>
                             </div>
                         </div>
                     </div>
