--- a/tienda.html
+++ b/tienda.html
@@ -72,18 +72,18 @@
                     <div class="top">
                         <img src="https://picsum.photos/400/280?random=1" alt="">
                         <p class="titProd">PRODUCTO 1</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
+                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$1560 <i class="fa-solid fa-heart"></i></p>
+                        <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
                                 <input type="number" name="cant" id="cant" min="0" value="1">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -92,61 +92,62 @@
                     <div class="top">
                         <img src="https://picsum.photos/400/280?random=2" alt="">
                         <p class="titProd">PRODUCTO 2</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit>. </p>
+                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart-circle-check"></i></p>
+                        <p class="precio">$2450 <button class="favorito"><i class="fa-solid fa-heart-circle-check"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
+                                <input type="number" name="cant" id="cant" min="0" value="1">
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
-                </div> 
+                </div>
+
 
                 <div class="card">
                     <div class="top">
                         <img src="https://picsum.photos/400/280?random=3" alt="">
                         <p class="titProd">PRODUCTO 3</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
+                        <p class="precio">$3500 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
+                                <input type="number" name="cant" id="cant" min="0" value="1">
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
-                </div> 
+                </div>
 
                 <div class="card">
                     <div class="top">
                         <img src="https://picsum.photos/400/280?random=4" alt="">
                         <p class="titProd">PRODUCTO 4</p>
-                        <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus voluptates</p>
+                        <p class="descrpcion">Lorem ipsum dolor sit amet consecte. </p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$1800 <i class="fa-solid fa-heart-circle-check"></i></p>
+                        <p class="precio">$5600 <button class="favorito"><i class="fa-solid fa-heart-circle-check"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
+                                <input type="number" name="cant" id="cant" min="0" value="1">
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
-                </div> 
+                </div>
 
                 <div class="card">
                     <div class="top">
@@ -156,14 +157,14 @@
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
                     <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
+                        <p class="precio">$4320 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
+                                <input type="number" name="cant" id="cant" min="0" value="1">
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
                 </div> 
@@ -175,15 +176,15 @@
                         <p class="descrpcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus natus</p>
                         <a href="opiniones.html" class="resenias">ver reseñas</a>
                     </div>
-                    <div class="bottom">
-                        <p class="precio">$3500 <i class="fa-solid fa-heart"></i></p>
+                   <div class="bottom">
+                        <p class="precio">$1560 <button class="favorito"><i class="fa-solid fa-heart"></i></button></p>
                         <div class="agregar">
                             <form action="">
-                                <i class="fa-solid fa-square-minus"></i>
-                                <input type="number" name="cant" id="cant" min="0">
-                                <i class="fa-solid fa-square-plus"></i>
+                                <button class="restar"><i class="fa-solid fa-square-minus"></i></button>
+                                <input type="number" name="cant" id="cant" min="0" value="1">
+                                <button class="sumar"><i class="fa-solid fa-square-plus"></i></button>
                             </form>
-                            <button><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="addcarrito"><i class="fa-solid fa-cart-plus"></i></button>
                         </div>
                     </div>
                 </div> 
